[metadata]
name=
version=1.0.0
author=$doopy
author_email=your_email
description=Use this package to train your keyhole and predict it rapidly and right
license=MIT
url= https://github.com/513090336/web3-entry
classifiers=
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    #Natural Language :: Chinese        #我这里把它注释掉了，因为之后构建的时候报错了，不知道为甚，不过没关系，注释掉没有影响
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Operating System :: Unix
    # Topic :: NLP                  #我这里把它注释掉了，因为之后构建的时候报错了，不知道为甚，不过没关系，注释掉没有影响
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6       #python版本
    Programming Language :: Python :: 3.8


[options]
zip_safe=True
packages=find_packages()        #这里find_package最好这样写，另外的写法可能会报错
include_package_data=True       #重要
python_requires= >=3.6,<=3.9    #对于python版本的要求，
install_requires=               #python包需要的依赖，根据自己的项目而定
    pandas>=1.5.0
    numpy>=1.20.2
    scipy>=1.9.0
    matplotlib>=3.5.0
    opencv_python>=4.4.0.40
    torch>=1.7.1
    torchvision>=0.8.2
    tqdm>=4.55.0
    pillow>=8.2.0
    h5py>=3.6.0
    PyQt5>=5.14.0

